--- a/api/src/main/resources/templates/mentoring/list.html
+++ b/api/src/main/resources/templates/mentoring/list.html
@@ -8,6 +8,7 @@
         <div class="container mx-auto p-8 w-2/3">
             <div class="flex items-center justify-between h-16">
                 <a href="/mentoring/list" class="text-2xl font-bold">📌전체 멘토링</a>
+                <a th:href="@{/member/applyMentor}" class="ml-2 my-3 bg-neutral text-white px-4 py-2 rounded-lg text-sm hover:bg-black">멘토 지원</a>
                 <a th:href="@{/mentoring/create}" class="ml-2 my-3 bg-neutral text-white px-4 py-2 rounded-lg text-sm hover:bg-black">멘토링 작성</a>
             </div>
             <ul class="container">
