--- a/api/src/main/resources/templates/chat/rooms.html
+++ b/api/src/main/resources/templates/chat/rooms.html
@@ -25,6 +25,36 @@
         .tooltip:hover .tooltip-text {
             visibility: visible;
         }
+
+        .modal-overlay {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            display: none;
+            justify-content: center;
+            align-items: center;
+            z-index: 9999;
+        }
+
+        .modal-content {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            width: 400px;
+            height: 400px;
+
+        }
+        .modal-content2 {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 5px;
+            width: 400px;
+            height: auto;
+            min-height: 100px;
+        }
     </style>
 </head>
 <body>
@@ -35,41 +65,77 @@
         </div>
         <ul class="container">
             <li class="bg-neutral text-white p-3 flex justify-between border-b h-11 rounded-md">
-                <div class="text-sm flex items-center w-12">번호</div>
                 <div class="text-sm flex items-center w-1/4 justify-center">상대방 이름</div>
                 <div class="text-sm flex items-center w-1/4 justify-center">신청 시간</div>
                 <div class="text-sm flex items-center w-1/4 justify-center invisible">입장</div>
             </li>
-            <li th:each="room, roomStat : ${list}" class="bg-white p-3 flex justify-between border-b h-11" th:if="${room.sender.nickname == @rq.member.nickname}">
-                <div class="text-sm flex items-center w-12" th:text="${list.size() - roomStat.count + 1}"></div>
+            <li th:each="room: ${list}" class="bg-white p-3 flex justify-between border-b h-11" th:if="${room.sender.nickname == @rq.member.nickname}">
                 <div class="text-sm flex items-center w-1/4 justify-center" th:text="${#strings.equals(room.sender.nickname, myNickname) ? room.receiver.nickname : room.sender.nickname}"></div>
                 <div class="text-sm flex items-center w-1/4 justify-center" th:text="${#temporals.format(room.reservationTime, 'yy.MM.dd HH:00')} + ' ~ ' + ${#temporals.format(room.reservationTime.plusHours(1), 'HH:00')}"></div>
-                <div class="text-sm flex items-center w-1/4 justify-end pr-4">
+                <div class="text-sm flex items-center w-1/4 justify-center pr-4">
                     <a th:if="${room.status == 0}">
                         <p class="text-sm">대기중...</p>
                     </a>
                     <a th:if="${room.status == 1}" th:href="@{/chat/room(roomId=${room.roomId})}">
                         <p class="text-sm underline">입장</p>
                     </a>
-                    <a th:if="${room.status == 2}" th:href="@{/chat/delete/room(roomId=${room.roomId})}" onclick="return confirm('정말로 삭제하시겠습니까?')">
+                    <button th:if="${room.status == 2}" onclick="openModal2()">
                         <p class="text-sm tooltip">
                             ❌
                             <span class="tooltip-text">신청이 거절되었습니다.</span>
                         </p>
-                    </a>
+                    </button>
+                    <div id="modal2" class="modal-overlay">
+                        <div class="modal-content2">
+                            <!-- 모달 내용 -->
+
+                            <div class="mb-4" style="word-wrap: break-word;" th:text="'거절 사유 : ' + ${room.rejectionReason}"></div>
+                            <div class="mb-4">확인 후 재신청해주세요.</div>
+                            <div class="flex mt-4">
+                                <div class="flex-grow">
+                                    <a class="btn btn-sm apply ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm hover:bg-black"
+                                            th:href="@{/chat/delete/room(roomId=${room.roomId})}" onclick="return confirm('정말로 삭제하시겠습니까?')">방 삭제
+                                    </a>
+                                </div>
+                                <button type="button" onclick="closeModal2()">닫기</button>
+                            </div>
+
+                        </div>
+                    </div>
                     <a th:if="${room.status == 3}" th:href="@{/chat/room(roomId=${room.roomId})}">
                         <p class="text-sm underline">종료됨</p>
                     </a>
                 </div>
             </li>
-            <li th:each="room, roomStat : ${list}" class="bg-white p-3 flex justify-between border-b h-11" th:if="${room.receiver.nickname == @rq.member.nickname and room.visible}">
-                <div class="text-sm flex items-center w-12" th:text="${list.size() - roomStat.count + 1}"></div>
+            <li th:each="room : ${list}" class="bg-white p-3 flex justify-between border-b h-11" th:if="${room.receiver.nickname == @rq.member.nickname and room.visible}">
                 <div class="text-sm flex items-center w-1/4 justify-center" th:text="${#strings.equals(room.sender.nickname, myNickname) ? room.receiver.nickname : room.sender.nickname}"></div>
                 <div class="text-sm flex items-center w-1/4 justify-center" th:text="${#temporals.format(room.reservationTime, 'yy.MM.dd HH:00')} + ' ~ ' + ${#temporals.format(room.reservationTime.plusHours(1), 'HH:00')}"></div>
-                <div class="text-sm flex items-center w-1/4 justify-end pr-4">
+                <div class="text-sm flex items-center w-1/4 justify-center pr-4">
                     <div th:if="${room.status == 0}">
                         <a th:href="@{/chat/permit/room(roomId=${room.roomId})}">✅</a>
-                        <a th:href="@{/chat/reject/room(roomId=${room.roomId})}">❌</a>
+                        <button onclick="openModal()">❌</button>
+                        <div id="modal" class="modal-overlay">
+                            <div class="modal-content">
+                                <!-- 모달 내용 -->
+                                <form class="mr-3" method="post" th:action="@{/chat/reject/room(roomId=${room.roomId})}">
+                                    <div class="mb-4">
+                                        거절 사유를 입력하세요.
+                                    </div>
+
+                                    <div class="mb-4">
+                                        <textarea name="content" class="form-textarea w-full h-64 resize-none border border-neutral rounded-md p-3" placeholder="내용을 입력하세요"></textarea>
+                                    </div>
+                                    <div class="flex">
+                                        <div class="flex-grow">
+                                            <button type="submit" class="apply ml-2 bg-neutral text-white px-4 py-2 rounded-lg text-sm hover:bg-black">전송
+                                            </button>
+                                        </div>
+                                        <button type="button" onclick="closeModal()">닫기</button>
+                                    </div>
+                                </form>
+
+                            </div>
+                        </div>
                     </div>
                     <a th:if="${room.status == 1}" th:href="@{/chat/room(roomId=${room.roomId})}">
                         <p class="text-sm underline">입장</p>
@@ -87,10 +153,30 @@
             </li>
 
 
-            </li>
 
         </ul>
     </div>
+    <script layout:fragment="script" type='text/javascript'>
+        function openModal() {
+            document.getElementById("modal").style.display = "flex";
+            document.body.style.overflow = "hidden";
+        }
+
+        function closeModal() {
+            document.getElementById("modal").style.display = "none";
+            document.body.style.overflow = "auto";
+        }
+
+        function openModal2() {
+            document.getElementById("modal2").style.display = "flex";
+            document.body.style.overflow = "hidden";
+        }
+
+        function closeModal2() {
+            document.getElementById("modal2").style.display = "none";
+            document.body.style.overflow = "auto";
+        }
+    </script>
     </main>
 
     </body>
