--- a/api/src/main/resources/templates/member/myArticles.html
+++ b/api/src/main/resources/templates/member/myArticles.html
@@ -38,7 +38,7 @@
                         <span>&lt; 이전</span>
                     </a>
                     <a th:text="${page} + 1" class="page-link btn btn-sm btn-ghost m-1"
-                       th:each="page: ${#numbers.sequence(paging.number - 4, paging.number + 3)}"
+                       th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
                        th:if="${page >= paging.number / 10 * 10 and page <= paging.number / 10 * 10 + 9}"
                        th:classappend="${page == paging.number} ? 'btn-outline pointer-events-none'"
                        onclick="updatePageNumber()" th:attr="page=${page}"></a>
