--- a/api/src/main/resources/templates/mentoring/detailMentoring.html
+++ b/api/src/main/resources/templates/mentoring/detailMentoring.html
@@ -29,16 +29,33 @@
 <body>
 <main layout:fragment="main" class="container my-3 mx-auto">
 
-    <div class="container mx-auto py-8 w-1/2">
+    <div class="container mx-auto py-8 w-1/3">
         <a href="/mentoring/list" class="bg-white text-neutral px-1 py-1 mb-3 rounded-md flex-start hover:bg-gray-200">&lt; 전체 멘토링</a>
         <h1 class="text-2xl font-bold flex-grow pl-3 mt-2 truncate overflow-ellipsis" th:text="${mentoring.title}"></h1>
         <div class="flex justify-between mt-2 mb-1">
-            <p class="text-xs mt-2 mr-2 w-80 ml-3" th:text="${mentoring.member.nickname}"></p>
-            <p class="flex-grow text-xs mt-2" th:text="${#temporals.format(mentoring.createdDate, 'yyyy-MM-dd HH:mm')}"></p>
+            <p class="text-xs mt-2 mr-2 w-80 ml-3 flex-grow" th:text="${mentoring.member.nickname}"></p>
             <a th:href="@{|/mentoring/update/${mentoring.id}|}" th:if="${@rq.login  and @rq.member.id == mentoring.member.id}" class="text-xs text-black mt-2 underline text-gray-400">수정</a>
             <a href="javascript:void(0);" th:if="${@rq.login and @rq.member.id == mentoring.member.id}" th:data-uri="@{|/mentoring/delete/${mentoring.id}|}" class="delete text-xs text-black mt-2 mx-2 underline text-gray-400">삭제</a>
         </div>
         <hr class="border-neutral mb-4">
+        <div class="pl-3 mb-5">
+            <div class="flex">
+                <p class="text-sm text-gray-400 mr-2">직무</p>
+                <p class="text-sm" th:text="${mentoring.job}"></p>
+            </div>
+            <div class="flex">
+                <p class="text-sm text-gray-400 mr-2">경력</p>
+                <p class="text-sm" th:text="${mentoring.career}"></p>
+            </div>
+            <div class="flex" th:if="${mentoring.currentJob != ''}">
+                <p class="text-sm text-gray-400 mr-2">현직</p>
+                <p class="text-sm" th:text="${mentoring.currentJob}"></p>
+            </div>
+            <div class="flex" th:if="${mentoring.preferredTime != ''}">
+                <p class="text-sm text-gray-400 mr-2">멘토링 가능 시간</p>
+                <p class="text-sm" th:text="${mentoring.preferredTime}"></p>
+            </div>
+        </div>
 
         <div class="min-h-[200px]">
             <div style="word-wrap: break-word;">
