--- a/api/src/main/resources/templates/mentoring/list.html
+++ b/api/src/main/resources/templates/mentoring/list.html
@@ -31,7 +31,7 @@
     <form th:action="@{/mentoring/list}" method="get" id="toListForm">
         <div class="container mx-auto p-8 mentor-list w-[1000px]">
             <div class="flex items-center justify-between h-16">
-                <a href="/mentoring/list" class="text-2xl font-bold">📌전체 멘토링</a>
+                <a href="/mentoring/list" class="text-2xl font-bold">👨‍🏫 전체 멘토링</a>
                 <a th:href="@{/mentoring/create}" class="ml-2 my-3 bg-neutral text-white px-4 py-2 rounded-lg text-sm hover:bg-black">멘토링 작성</a>
             </div>
             <ul class="grid-container">
