Style: 텍스트 배치 수정

--- a/api/src/main/resources/templates/payment/payment-page.html
+++ b/api/src/main/resources/templates/payment/payment-page.html
@@ -12,12 +12,15 @@
             <div class="text-center">
                 <h1 class="text-4xl font-semibold" style="color: #2020a3;">free</h1>
                 <hr class="mb-4 mt-4">
-                <p class="text-red-500 mt-2 mb-3 text-left">생성 AI 사용을 위한 코인 매일 10개 제공</p>
-                <p class="text-gray-600 mt-2 mb-3 text-left">이력서 검토 서비스 이용 가능</p>
-                <p class="text-gray-600 mt-2 mb-3 text-left">면접 예상 질문 서비스 이용 가능</p>
-                <p class="text-gray-600 mt-2 mb-3 text-left">채용공고 서비스 이용 가능</p>
-                <p class="text-gray-600 mt-2 mb-3 text-left">커뮤니티 서비스 이용 가능</p>
-                <p class="text-red-500 mt-2 mb-3 text-left">멘토링 서비스 이용 불가</p>
+                <div class="text-center">
+                    <p class="text-red-500 mt-2 mb-3">생성 AI 사용을 위한 코인 매일 10개 제공</p>
+                    <p class="text-gray-600 mt-2 mb-3">이력서 검토 서비스 이용 가능</p>
+                    <p class="text-gray-600 mt-2 mb-3">면접 예상 질문 서비스 이용 가능</p>
+                    <p class="text-gray-600 mt-2 mb-3">채용공고 서비스 이용 가능</p>
+                    <p class="text-gray-600 mt-2 mb-3">커뮤니티 서비스 이용 가능</p>
+                    <p class="text-red-500 mt-2 mb-3">멘토링 서비스 이용 불가</p>
+                    <p class="text-red-500 mt-2 mb-3">채팅 서비스 이용 불가</p>
+                </div>
             </div>
         </div>
 
@@ -25,18 +28,23 @@
             <div class="text-center">
                 <h1 class="text-4xl font-semibold" style="color: #ffc307;">Premium</h1>
                 <hr class="mb-4 mt-4">
-                <p class="text-red-500 mt-2 mb-3 text-left">코인 제한 없이 생성 AI 무제한 이용 가능</p>
-                <p class="text-gray-600 mt-2 mb-3 text-left">이력서 검토 서비스 무제한 이용 가능</p>
-                <p class="text-gray-600 mt-2 mb-3 text-left">면접 예상 질문 서비스 무제한 이용 가능</p>
-                <p class="text-gray-600 mt-2 mb-3 text-left">멘토링 서비스 이용 가능</p>
-                <p class="text-gray-600 mt-2 mb-3 text-left">멘토링 내역 파일로 제공</p>
+                <div class="text-center">
+                    <p class="text-red-500 mt-2 mb-3">코인 제한 없이 생성 AI 무제한 이용 가능</p>
+                    <p class="text-gray-600 mt-2 mb-3">이력서 검토 서비스 무제한 이용 가능</p>
+                    <p class="text-gray-600 mt-2 mb-3">면접 예상 질문 서비스 무제한 이용 가능</p>
+                    <p class="text-gray-600 mt-2 mb-3">멘토링 서비스 이용 가능</p>
+                    <p class="text-gray-600 mt-2 mb-3">멘토링 내역 파일로 제공</p>
+                </div>
 
-                <p class="text-gray-500 text-sm text-center">₩5,900/월 • VAT 포함</p>
-                <button id="payment-button" class="btn btn-lg btn-block">시작하기</button>
-                <hr class="mb-4 mt-4">
-                <p class="text-gray-500 text-sm text-center">
-                    * 시작하기 버튼을 클릭하면 결제가 진행됩니다.
-                </p>
+                <div class="text-center mt-5">
+                    <p class="text-gray-500 text-sm text-center">₩5,900/월 • VAT 포함</p>
+                    <button id="payment-button" class="btn btn-lg btn-block mt-2">시작하기</button>
+                    <hr class="mb-4 mt-3">
+                    <p class="text-gray-500 text-sm text-center">
+                        * 시작하기 버튼을 클릭하면 결제가 진행됩니다.
+                    </p>
+                </div>
+
             </div>
         </div>
     </div>
