--- a/api/src/main/resources/templates/member/myComments.html
+++ b/api/src/main/resources/templates/member/myComments.html
@@ -40,7 +40,7 @@
                     </a>
                     <a th:text="${page} + 1" class="page-link btn btn-sm btn-ghost m-1"
                        th:each="page: ${#numbers.sequence(0, paging.totalPages-1)}"
-                       th:if="${page >= paging.number / 10 * 10 and page <= paging.number / 10 * 10 + 9}"
+                       th:if="${page >= paging.number - 3 and page <= paging.number + 3}"
                        th:classappend="${page == paging.number} ? 'btn-outline pointer-events-none'"
                        onclick="updatePageNumber()" th:attr="page=${page}"></a>
                     <a class="page-link btn btn-sm btn-ghost m-1" th:href="@{|?page=${paging.number + 1}|}"
