--- a/api/src/main/resources/templates/resume/question-result.html
+++ b/api/src/main/resources/templates/resume/question-result.html
@@ -45,7 +45,7 @@
 
     <div class="w-full max-w-2xl mx-auto">
         <h1 class="text-2xl mb-6">🧐 이런 점이 궁금해요</h1>
-        <div th:each="predictionResponse, stat : ${predictionResponses}">
+        <div th:each="predictionResponse, stat : ${predictionResponses.predictionResponse}">
             <th:block th:if="${stat.index % 3 == 0}">
                 <div class="border-t-2 pt-6">
                     <h2 class="text-xl mb-2">요청 <span th:text="${(stat.index / 3) + 1}"></span></h2>
@@ -60,4 +60,5 @@
     </div>
 </main>
 </body>
+
 </html>
