--- a/api/src/main/resources/templates/resume/request-complete.html
+++ b/api/src/main/resources/templates/resume/request-complete.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <main layout:fragment="main" class="flex justify-center items-center h-auto mt-16">
-    <h1 class="text-2xl mb-6">📝 답변을 성공적으로 제출했어요!</h1>
+    <h1 class="text-2xl mb-6">📝 답변을 성공적으로 제출했어요.</h1>
+    <h2 class="text-xl mb-6">결과는 제출 후 30초~1분 정도가 소요되며, 마이페이지에서 확인할 수 있습니다!</h2>
 </main>
 </body>
 </html>
