Feat: 배포용 토픽 설정

--- a/api/src/main/resources/templates/layout/layout.html
+++ b/api/src/main/resources/templates/layout/layout.html
@@ -22,7 +22,7 @@
         <li><a href="/payment/showPage" th:if="${@rq.login}" class="btn btn-ghost normal-case text-xl" th:text="|남은 코인: ${@rq.member.coin}개|">남은 코인: 10개</a></li>
         <li><a href="/member/me" th:if="${@rq.login}" class="btn btn-ghost normal-case text-xl" th:text="|${@rq.member.nickname}님 환영합니다.|"></a></li>
         <li>
-          <a href="javascript:;" th:if="${@rq.login}" onclick="$(this).next().submit();" class="btn btn-ghost normal-case text-xl">로그아웃</a>
+          <a href="javascript:" th:if="${@rq.login}" onclick="$(this).next().submit();" class="btn btn-ghost normal-case text-xl">로그아웃</a>
           <form th:if="${@rq.login}" style="display: none;" th:action="|/member/logout|" method="POST"></form>
         </li>
       </ul>
