--- a/api/src/main/resources/static/resource/common/common.css
+++ b/api/src/main/resources/static/resource/common/common.css
@@ -1,13 +1,12 @@
 @font-face {
-    font-family: "GmarketSansMedium";
-    src: url("https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff")
-    format("woff");
-    font-weight: normal;
+    font-family: 'Pretendard-Regular';
+    src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+    font-weight: 400;
     font-style: normal;
 }
 
-html > body {
-    font-family: "GmarketSansMedium";
+body {
+    font-family: "Pretendard-Regular", serif;
     text-underline-position: under;
     word-break: keep-all;
 }
