Refactor: 등급에 따라 보여지는 버튼 설정

--- a/api/src/main/resources/templates/payment/payment-page.html
+++ b/api/src/main/resources/templates/payment/payment-page.html
@@ -10,7 +10,7 @@
     <div class="container mx-auto flex justify-center items-start">
         <div class="bg-white p-8 border rounded-lg w-2/5 mr-8">
             <div class="text-center">
-                <h1 class="text-4xl font-semibold" style="color: #2020a3;">free</h1>
+                <h1 class="text-4xl font-semibold" style="color: #2020a3;">Free</h1>
                 <hr class="mb-4 mt-4">
                 <div class="text-center">
                     <p class="text-red-500 mt-2 mb-3">생성 AI 사용을 위한 코인 매일 10개 제공</p>
