--- a/api/src/main/resources/templates/member/me.html
+++ b/api/src/main/resources/templates/member/me.html
@@ -74,7 +74,7 @@
                             <span th:text="'멘토'" class="mentor" th:if="${@rq.member.userRole == 'mentor'}"></span>
                         </div>
                         <div>
-                            <a href="/payment/showPage" th:if="${!@rq.member.isPayed()}"
+                            <a href="/payment/showPage" th:if="${!@rq.member.isPayed() and !@rq.member.isMentor()}"
                                class="bg-neutral text-white px-4 py-2 rounded-lg text-sm">결제하기
                             </a>
                         </div>
