Refactor: 이메일 전송, 검증 로직 리팩토링

--- a/api/src/main/resources/templates/member/join.html
+++ b/api/src/main/resources/templates/member/join.html
@@ -103,6 +103,9 @@
                         </div>
                     </div>
                     <div>
+                        <span id="timer" class="text-green-500"></span>
+                    </div>
+                    <div>
                         <span id="verificationCodeMessage" style="display: none;">코드일치여부</span>
                     </div>
                 </div>
